--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "npm": "^8.2.0",
         "passport": "^0.5.0",
         "passport-local": "^1.0.0",
+        "sqlite3": "^5.0.2",
         "watchify": "4.0.0"
     }
 }
