--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "update": "git fetch origin main && git reset --hard FETCH_HEAD",
-        "start": "nodemon app.js"
+        "start": "nodemon app.js",
+        "stop" : "pkill --signal SIGINT myApp"
     },
     "repository": {
         "type": "git",
